[package]
name = "empty_spaces"
version = "0.1.0"
authors = ["Ilya Atamas <stackdumper@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
specs = {version = "0.15", features = ["shred-derive", "serde", "uuid_entity"]}
shred = "0.9"
specs-derive = "0.4"
cgmath = {version = "0.17", features = ["serde"]}
fps_clock = "2.0"
ws = "0.8"
serde = "1.0"
serde_json = "1.0"
rand = "0.7"
